# macOS-One-Click

./: .gitignore  BUGHUNTERCLAUDE.md  CHANGELOG.md  CODEX_HANDOFF.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
electron/: amdPatches.ts  appUpdater.ts  appleRecovery.ts  cli.ts  communityEvidence.ts  compatibility.ts  compatibilityMatrix.ts  configGenerator.ts  configValidator.ts  deterministicLayer.ts  diskOps.ts  efiBuildFlow.ts  errorMessaging.ts  firmwarePreflight.ts  flashSafety.ts  hackintoshRules.ts  hardwareDetect.ts  hardwareInterpret.ts  hardwareMapper.ts  hardwareProfileArtifact.ts  kextSourcePolicy.ts  linuxElevate.ts  logger.ts  main.ts  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: contracts.rs  error.rs  lib.rs
src-tauri/src/commands/: diagnostics.rs  disk.rs  efi.rs  firmware.rs  hardware.rs  mod.rs  recovery.rs  state.rs  task.rs
src-tauri/src/domain/: amd_patches.rs  compatibility.rs  config_generator.rs  config_validator.rs  form_factor.rs  hardware_detect.rs  hardware_interpret.rs  hardware_mapper.rs  kext_policy.rs  mod.rs  rules.rs  ssdt_policy.rs  wifi_policy.rs
src-tauri/src/platform/linux/: scanner.rs
src-tauri/src/platform/windows/: scanner.rs
src-tauri/src/safety/: disk_identity.rs  flash_auth.rs  mod.rs
src-tauri/src/tasks/: cancellation.rs  mod.rs  registry.rs
src-tauri/tests/: config_generator_test.rs
(+166 files in other folders)
