[package]
name = "opcore-oneclick"
version = "5.0.0"
description = "Hackintosh EFI generator — build OpenCore configurations from detected hardware"
authors = ["redpersongpt"]
license = "MIT"
repository = "https://github.com/redpersongpt/OpCore-OneClick"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
quick-xml = { version = "0.37", features = ["serialize"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
zip = "2"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dirs = "6"
rand = "0.9"
regex = "1"
once_cell = "1"
futures-util = "0.3"
hostname = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
